--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -9,14 +9,14 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
-
-html {
+  font-weight: 300;
   font-family: $font;
   font-size: 16px;
   line-height: 1.38;
   color: $text;
-  font-weight: 300;
+  @include max(1280) {
+    font-weight: 300;
+  }
 }
 
 body {
@@ -82,18 +82,18 @@ button {
   outline: none;
 }
 
-input {
-  padding: 3px 10px 5px 10px;
-  color: $text;
-  border: 1px solid $text;
-  &::placeholder {
-    @include placeholder-color($text);
-  }
-}
-
-textarea {
-  resize: none;
-}
+//input {
+//  padding: 3px 10px 5px 10px;
+//  color: $text;
+//  border: 1px solid $text;
+//  &::placeholder {
+//    @include placeholder-color($text);
+//  }
+//}
+//
+//textarea {
+//  resize: none;
+//}
 
 //input.error,
 //textarea.error {
@@ -133,33 +133,37 @@ svg {
   flex-grow: 1;
 }
 
-//.container {
-//  position: relative;
-//  width: 100%;
-//  max-width: 1200px;
-//  margin: 0 auto;
-//  padding: 0 30px;
-//}
-//
-//.btn {
-//  font-family: 'OpenSans', sans-serif;
-//  font-size: 24px;
-//  font-weight: 500;
-//  line-height: 1;
-//  display: inline-block;
-//  padding: 10px 40px;
-//  cursor: pointer;
-//  text-transform: uppercase;
-//  transition: background-color .5s;
-//  white-space: nowrap;
-//  text-decoration: none;
-//  color: #fff;
-//  border: none;
-//  border-radius: 5px !important;
-//  background-color: $highlight;
-//  box-shadow: none;
-//  &:hover {
-//    color: #fff;
-//    background-color: $highlight-hov;
-//  }
-//}
+.container-inn {
+  max-width:1156px;
+}
+
+.button {
+  line-height: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: .5s;
+  white-space: nowrap;
+  text-decoration: none;
+  color: #fff;
+  border: none;
+  background-color: $highlight;
+  box-shadow: none;
+  padding: 16px 32px;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: 'Nunito', sans-serif;
+  border-radius: 25px !important;
+  &:hover {
+    color: #fff;
+    background-color: $highlight-hov;
+  }
+}
+.button--grey{
+  background-color: #4a4a4a;
+  &:hover {
+    background-color: lighten(#4a4a4a, 10%);
+  }
+
+}
