--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,22 +1,17 @@
 extends ../_template
 
 block variables
-  - var title       = 'Odinokun`s start template'
-  - var description = 'Odinokun`s start template'
-  - var ogtitle     = 'Odinokun`s start template'
+  - var title       = 'Tempeak'
+  - var description = 'Tempeak'
+  - var ogtitle     = 'Tempeak'
   - var ogimage     = 'assets/img/social.jpg'
-
-  - var pageHeaderTitle = 'Odinokun`s start template'
-  - var breadcrumbs     = 'breadcrumbs'
 
 block content
   .main-wrap.no-js
     include ../sections/header
 
     //begin content
-    main.main.index
-      .container
-        div.alert.alert-primary(role="alert") A simple primary alert—check it out!
+    main.main
     //end content
 
     include ../sections/footer
