--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -27,7 +27,8 @@ html(lang="ru")
     link(rel='stylesheet' href='assets/css/app.css')
 
     // begin custom browsers color
-    meta(name='theme-color', content='#ffbd06')
+    //meta(name='theme-color', content='#ffbd06')
+    meta(name='theme-color', content='#f00')
 
     //[if lt IE 9]><script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]
 
