--- a/src/pug/sections/page-header-sm.pug
+++ b/src/pug/sections/page-header-sm.pug
@@ -1,7 +1,5 @@
 //begin page-header
-header.page-header
+header.page-header.page-header--sm
   .container.container-inn
-    a(href="#").page-header__back
-      +svg('page-header-arrow')
     h2.page-header__title #{pageHeaderTitle}
 //end page-header
