--- a/src/pug/pages/results.pug
+++ b/src/pug/pages/results.pug
@@ -11,11 +11,11 @@ block variables
 block content
   .main-wrap.no-js
     include ../sections/header
-    include ../sections/page-header-arrow
+    include ../sections/page-header-arr
 
     //begin content
     main.main.results
-      .container.container-inn
+      .container.container-inn.container-inn--sm
         include ../elements/person-card-01
     //end content
 
