did how it works page

--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -152,6 +152,7 @@ svg {
   cursor: pointer;
   transition: .5s;
   white-space: nowrap;
+  user-select: none;
   text-decoration: none;
   color: #fff;
   border: none;
