--- a/src/style/core/_variables.scss
+++ b/src/style/core/_variables.scss
@@ -12,3 +12,6 @@ $link-hov: lighten($link, 10%);
 
 // ===== fonts =====
 $font: 'Nunito', sans-serif;
+
+// ===== radius =====
+$block-radius: 25px;
