--- a/src/style/pages/_pricing.scss
+++ b/src/style/pages/_pricing.scss
@@ -64,7 +64,7 @@
   margin-bottom: 16px;
   padding: 16px 8px;
   border: 1px solid #efefef;
-  border-radius: 25px;
+  border-radius: $block-radius;
   background-color: #fbfbfb;
 }
 
