--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -17,7 +17,7 @@ block content
     main.main.contact
       .container.container-inn.container-inn--sm
 
-        .contact__form.contact-form
+        form.contact__form.contact-form
           //begin contact-form-header
           .contact-form__header.contact-form-header
             a(href="https://goo.gl/maps/CVqkLzd656Tig33q7" target="_blank" rel="nofollow noopener noreferrer").contact-form-header__link.contact-form-header__link--adress
@@ -32,7 +32,7 @@ block content
           //end contact-form-header
 
           //begin contact-form__body
-          form.contact-form__body
+          .contact-form__body
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
