--- a/src/style/sections/_page-header.scss
+++ b/src/style/sections/_page-header.scss
@@ -7,6 +7,7 @@
     padding-top: 22px;
   }
   .container-inn {
+    position: relative;
     display: flex;
     align-items: center;
   }
@@ -21,7 +22,7 @@
     }
   }
   .page-header__title {
-    margin-left: 0;
+    margin: 0;
   }
 }
 
@@ -33,10 +34,21 @@
       justify-content: flex-start;
     }
   }
+  .page-header__title {
+    @include max(575) {
+      margin-right: 0;
+    }
+  }
 }
 
 .page-header__back {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 14px;
   flex: none;
+  height: 24px;
+  margin: auto;
   padding: 0 25px;
 
   @include max(980) {
@@ -65,11 +77,10 @@
   font-family: $font;
   font-size: 32px;
   font-weight: 400;
-  margin-bottom: 0;
-  margin-left: 20px;
+  margin: 0 95px;
   color: #000;
 
   @include max(980) {
-    margin-left: 0;
+    margin: 0 32px;
   }
 }
