did sign-up page

--- a/src/pug/pages/log-in.pug
+++ b/src/pug/pages/log-in.pug
@@ -34,7 +34,7 @@ block content
             //end form-group
 
             .log-in-form__row
-              label.log-in-form__checkbox
+              label.log-in-form__checkbox.log-in-form__checkbox--radio
                 input.form-check-input(type='checkbox')
                 span Remember me
               a(href="#").log-in-form__forgot-link Forgot password?
