--- a/src/style/core/_bootstrap-update.scss
+++ b/src/style/core/_bootstrap-update.scss
@@ -49,7 +49,7 @@
 .form-control {
   height: 48px;
   padding-right: 40px;
-  padding-left: 45px;
+  padding-left: 48px;
   border: 1px solid #d4d4d4;
   border-radius: 25px !important;
 }
@@ -58,12 +58,16 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 23px;
-  width: 17px;
+  left: 18px;
+  //width: 17px;
+  width: 26px;
   height: 17px;
   margin: auto;
   svg {
-    width: 17px;
-    height: 17px;
+    fill: #4a4a4a;
+    //width: 17px;
+    width: 26px;
+    height: 16px;
+    margin: 0 auto;
   }
 }
