--- a/src/style/pages/_log-in.scss
+++ b/src/style/pages/_log-in.scss
@@ -72,22 +72,34 @@
       height: 20px;
       content: '';
       border: 1px solid #d4d4d4;
-      border-radius: 50%;
       background-color: #fff;
     }
     &::after {
       position: absolute;
       top: 0;
-      bottom: 0;
-      left: 7px;
-      width: 6px;
-      height: 6px;
+      bottom: 12px;
+      left: 3px;
+      width: 20px;
+      height: 10px;
       margin: auto;
       content: '';
+      transform: rotate(-45deg);
       opacity: 0;
-      border-radius: 50%;
-      background-color: $link;
+      border-bottom: 3px solid $link;
+      border-left: 3px solid $link;
     }
+  }
+}
+
+.log-in-form__checkbox--radio {
+  span::before {
+    border-radius: 50%;
+  }
+}
+
+.log-in-form__checkbox--check {
+  span::before {
+    border-radius: 5px;
   }
 }
 
