--- a/src/style/pages/_log-in.scss
+++ b/src/style/pages/_log-in.scss
@@ -74,20 +74,6 @@
       border: 1px solid #d4d4d4;
       background-color: #fff;
     }
-    &::after {
-      position: absolute;
-      top: 0;
-      bottom: 12px;
-      left: 3px;
-      width: 20px;
-      height: 10px;
-      margin: auto;
-      content: '';
-      transform: rotate(-45deg);
-      opacity: 0;
-      border-bottom: 3px solid $link;
-      border-left: 3px solid $link;
-    }
   }
 }
 
@@ -95,19 +81,54 @@
   span::before {
     border-radius: 50%;
   }
+  span::after {
+    position: absolute;
+    top: 7px;
+    left: 7px;
+    width: 6px;
+    height: 6px;
+    content: '';
+    opacity: 0;
+    border-radius: 50%;
+    background-color: #fff;
+  }
 }
 
 .log-in-form__checkbox--check {
   span::before {
     border-radius: 5px;
   }
+  span::after {
+    position: absolute;
+    top: 0;
+    bottom: 3px;
+    left: 5px;
+    width: 11px;
+    height: 7px;
+    margin: auto;
+    content: '';
+    transform: rotate(-45deg);
+    opacity: 0;
+    border-bottom: 2px solid #fff;
+    border-left: 2px solid #fff;
+  }
 }
 
-.log-in-form__checkbox input:checked + span::before {
+.log-in-form__checkbox--check input:checked + span::before {
   border: 1px solid $link;
+  background-color: $link;
 }
 
-.log-in-form__checkbox input:checked + span::after {
+.log-in-form__checkbox--check input:checked + span::after {
+  opacity: 1;
+}
+
+.log-in-form__checkbox--radio input:checked + span::before {
+  border: 1px solid $link;
+  background-color: $link;
+}
+
+.log-in-form__checkbox--radio input:checked + span::after {
   opacity: 1;
 }
 
