--- a/src/pug/pages/reset-password.pug
+++ b/src/pug/pages/reset-password.pug
@@ -22,7 +22,8 @@ block content
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('email')
+                svg.svg-email
+                  use(xlink:href="assets/img/sprite.svg#email")
               input.form-control(type='email' placeholder='Email Address')
             //end form-group
 
