--- a/src/pug/pages/log-in.pug
+++ b/src/pug/pages/log-in.pug
@@ -22,14 +22,16 @@ block content
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('email')
+                svg.svg-email
+                  use(xlink:href="assets/img/sprite.svg#email")
               input.form-control(type='email' placeholder='Email Address')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('lock')
+                svg.svg-lock
+                  use(xlink:href="assets/img/sprite.svg#lock")
               input.form-control(type='password' placeholder='Password')
             //end form-group
 
