--- a/src/pug/pages/sign-up-2.pug
+++ b/src/pug/pages/sign-up-2.pug
@@ -22,7 +22,8 @@ block content
             //begin form-group
             .form-group.form-group--select
               .form-group__icon
-                +svg('persons')
+                svg.svg-persons
+                  use(xlink:href="assets/img/sprite.svg#persons")
               select.form-control.selectpicker
                 option(value='') Contractor
                 option(value='') Contractor 1
@@ -33,7 +34,8 @@ block content
             //begin form-group
             .form-group.form-group--select
               .form-group__icon
-                +svg('hospital')
+                svg.svg-hospital
+                  use(xlink:href="assets/img/sprite.svg#hospital")
               select.form-control.selectpicker
                 option(value='') Clinical Staff
                 option(value='') Clinical Staff 1
@@ -44,7 +46,8 @@ block content
             //begin form-group
             .form-group.form-group--select
               .form-group__icon
-                +svg('hospital')
+                svg.svg-hospital
+                  use(xlink:href="assets/img/sprite.svg#hospital")
               select.form-control.selectpicker
                 option(value='') Speciality
                 option(value='') Speciality 1
@@ -55,42 +58,48 @@ block content
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('person')
+                svg.svg-person
+                  use(xlink:href="assets/img/sprite.svg#person")
               input.form-control(type='text' placeholder='First Name')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('person')
+                svg.svg-person
+                  use(xlink:href="assets/img/sprite.svg#person")
               input.form-control(type='text' placeholder='Last Name')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('cake')
+                svg.svg-cake
+                  use(xlink:href="assets/img/sprite.svg#cake")
               input.form-control(type='text' placeholder='Birthday')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('email')
+                svg.svg-email
+                  use(xlink:href="assets/img/sprite.svg#email")
               input.form-control(type='email' placeholder='Email Address')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('lock')
+                svg.svg-lock
+                  use(xlink:href="assets/img/sprite.svg#lock")
               input.form-control(type='password' placeholder='Password')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('lock')
+                svg.svg-lock
+                  use(xlink:href="assets/img/sprite.svg#lock")
               input.form-control(type='password' placeholder='Confirm Password')
             //end form-group
 
