--- a/src/pug/pages/sign-up.pug
+++ b/src/pug/pages/sign-up.pug
@@ -22,7 +22,8 @@ block content
             //begin form-group
             .form-group.form-group--select
               .form-group__icon
-                +svg('persons')
+                svg.svg-persons
+                  use(xlink:href="assets/img/sprite.svg#persons")
               select.form-control.selectpicker
                 option(value='') Business Owner
                 option(value='') Business Owner 1
@@ -33,42 +34,48 @@ block content
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('person')
+                svg.svg-person
+                  use(xlink:href="assets/img/sprite.svg#person")
               input.form-control(type='text' placeholder='First Name')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('person')
+                svg.svg-person
+                  use(xlink:href="assets/img/sprite.svg#person")
               input.form-control(type='text' placeholder='Last Name')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('cake')
+                svg.svg-cake
+                  use(xlink:href="assets/img/sprite.svg#cake")
               input.form-control(type='text' placeholder='Birthday')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('email')
+                svg.svg-email
+                  use(xlink:href="assets/img/sprite.svg#email")
               input.form-control(type='email' placeholder='Email Address')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('lock')
+                svg.svg-lock
+                  use(xlink:href="assets/img/sprite.svg#lock")
               input.form-control(type='password' placeholder='Password')
             //end form-group
 
             //begin form-group
             .form-group.form-group--input
               .form-group__icon
-                +svg('lock')
+                svg.svg-lock
+                  use(xlink:href="assets/img/sprite.svg#lock")
               input.form-control(type='password' placeholder='Confirm Password')
             //end form-group
 
