--- a/src/style/core/_bootstrap-update.scss
+++ b/src/style/core/_bootstrap-update.scss
@@ -46,12 +46,14 @@
   }
 }
 
+//begin #INPUT WITH ICON
 .form-control {
   height: 48px;
   padding-right: 40px;
   padding-left: 48px;
   border: 1px solid #d4d4d4;
   border-radius: 25px !important;
+  background-color: #fff;
 }
 
 .form-group__icon {
@@ -59,15 +61,52 @@
   top: 0;
   bottom: 0;
   left: 18px;
-  //width: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 26px;
-  height: 17px;
+  height: 26px;
   margin: auto;
   svg {
     fill: #4a4a4a;
-    //width: 17px;
-    width: 26px;
-    height: 16px;
-    margin: 0 auto;
   }
 }
+
+//end #INPUT WITH ICON
+
+//begin #UPLOAD INPUT
+.form-group--input-file {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 48px;
+  padding-right: 40px;
+  padding-left: 48px;
+  border: 1px solid #d4d4d4;
+  border-radius: 25px !important;
+  background-color: #f1f1f1;
+  &::before {
+    position: absolute;
+    top: 0;
+    right: 21px;
+    bottom: 0;
+    width: 16px;
+    height: 16px;
+    margin: auto;
+    content: '';
+    background-image: url('../img/add.svg');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .form-control {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+  }
+}
+
+//end #UPLOAD INPUT
