did search contractor page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -16,6 +16,7 @@
 
 //section
 @import 'sections/header';
+@import 'sections/header-profile';
 @import 'sections/footer';
 @import 'sections/page-header';
 
