--- a/src/pug/elements/person-card-02.pug
+++ b/src/pug/elements/person-card-02.pug
@@ -1,28 +1,64 @@
 mixin person-card(ava)
   //begin person-card
-  .person-card
+  .person-card.person-card--result
     .person-card__ava
       img(src="assets/img/user-" + ava + ".jpg" alt="picture")
     .person-card__info
       h3.person-card__name John Wesley Langley
       span.person-card__position Thief River Falls
-      .person-card__rating
-        .rating-star-wrap
-          svg.rating-star-1
-            use(xlink:href="assets/img/sprite.svg#star-rating-full")
-          span.rating-star-filter
-          svg.rating-star-2
-            use(xlink:href="assets/img/sprite.svg#star-rating-transparent")
+      //begin person-card__info
+      .person-card__info-row
+        //begin person-card-rating
+        .person-card__rating.person-card-rating(data-rating='3.5')
+          .person-card-rating__stars.person-card-rating__stars--full
+            svg.rating-star.rating-star--full
+              use(xlink:href="assets/img/sprite.svg#star-rating-full")
+            svg.rating-star.rating-star--full
+              use(xlink:href="assets/img/sprite.svg#star-rating-full")
+            svg.rating-star.rating-star--full
+              use(xlink:href="assets/img/sprite.svg#star-rating-full")
+            svg.rating-star.rating-star--full
+              use(xlink:href="assets/img/sprite.svg#star-rating-full")
+            svg.rating-star.rating-star--full
+              use(xlink:href="assets/img/sprite.svg#star-rating-full")
+
+          .person-card-rating__filter
+          .person-card-rating__value
+
+          .person-card-rating__stars.person-card-rating__stars--transparent
+            svg.rating-star.rating-star--transparent
+              use(xlink:href="assets/img/sprite.svg#star-rating-transparent")
+            svg.rating-star.rating-star--transparent
+              use(xlink:href="assets/img/sprite.svg#star-rating-transparent")
+            svg.rating-star.rating-star--transparent
+              use(xlink:href="assets/img/sprite.svg#star-rating-transparent")
+            svg.rating-star.rating-star--transparent
+              use(xlink:href="assets/img/sprite.svg#star-rating-transparent")
+            svg.rating-star.rating-star--transparent
+              use(xlink:href="assets/img/sprite.svg#star-rating-transparent")
+        //end person-card-rating
+        //begin person-card-salary
+        .person-card__salary.person-card-salary
+          span.person-card-salary__text Salary range
+          i $
+          span.person-card-salary__value 10
+        //end person-card-salary
+        //begin person-card-experience
+        .person-card__experience.person-card-experience
+          span.person-card-experience__text Experience
+          svg.svg-clock
+            use(xlink:href="assets/img/sprite.svg#clock")
+          span.person-card-experience__value 1-2 years
+        //end person-card-experience
+
+      //end person-card__info
 
     .person-card__button
       button.button.button--grey
         span Send
-        +svg('eye')
+        +svg('send-2')
   //end person-card
-
 
 +person-card('01')
 +person-card('02')
 +person-card('03')
-
-
