--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -153,6 +153,7 @@ svg {
   font-weight: 400;
   line-height: 1;
   display: flex;
+  outline: none !important;
   justify-content: center;
   align-items: center;
   padding: 16px 32px;
