did profile clinic

--- a/src/style/sections/_page-header.scss
+++ b/src/style/sections/_page-header.scss
@@ -84,3 +84,53 @@
     margin: 0 32px;
   }
 }
+
+
+//begin #PAGE HEADER BTN
+.page-header-menu{
+  position: relative;
+  margin-left: auto;
+  transform: translateX(8px);
+  &:hover {
+    .page-header-menu__list{
+      opacity: 1;pointer-events: auto;
+    }
+  }
+
+}
+.page-header-menu__button{
+  padding: 14px 8px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  background-color: #fff;
+  cursor: pointer;
+  svg {
+    width: 6px;
+    height: 14px;
+    fill:#9d9d9d;
+  }
+}
+.page-header-menu__list{
+  position: absolute;
+  min-width: 194px;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.12);
+  background-color: #ffffff;
+  top: 100%;
+  right: 0;
+  margin: 0;
+  opacity: 0;pointer-events: none;
+  transition: opacity .5s;
+  padding: 8px 0;
+}
+.page-header-menu__item {
+  list-style: none;
+  padding: 8px 30px;
+}
+.page-header-menu__link{
+  color: #000000;
+  font-size: 16px;
+  font-weight: 400;
+}
+//end #PAGE HEADER BTN
