did profile-person page

--- a/src/pug/pages/profile-clinic.pug
+++ b/src/pug/pages/profile-clinic.pug
@@ -27,7 +27,7 @@ block content
         //begin profile-clinic__right
         .profile-clinic__right
           h3.profile-clinic__title Cleveland Clinic
-          h4.profile-clinic__name John Wesley
+          h4.profile-clinic__subtitle John Wesley
           //begin profile-clinic__contacts
           .profile-clinic__contacts
             a(href="https://goo.gl/maps/CVqkLzd656Tig33q7" target="_blank" rel="nofollow noopener noreferrer").profile-clinic__contacts-link
