did edit-profile-businnes

--- a/src/pug/pages/profile-clinic.pug
+++ b/src/pug/pages/profile-clinic.pug
@@ -19,9 +19,8 @@ block content
         //begin profile-clinic__left
         .profile-clinic__left
           .profile-clinic__ava.profile-clinic-ava
-            .profile-clinic-ava__svg
-              +svg('flash')
-            .profile-clinic-ava__text Cleveland Clinic
+            .profile-clinic-ava__pic
+              img(src="assets/img/clinic-logo.jpg" alt="picture")
         //end profile-clinic__left
 
         //begin profile-clinic__right
