--- a/src/pug/pages/profile-person.pug
+++ b/src/pug/pages/profile-person.pug
@@ -21,7 +21,7 @@ block content
           //begin profile-person-row__left
           .profile-person-row__left
             .profile-person__ava.profile-person-ava
-              .profile-person-ava__svg
+              .profile-person-ava__pic
                 img(src="assets/img/profile-person.jpg" alt="picture")
           //end profile-person-row__left
 
