--- a/src/pug/pages/edit-profile-person.pug
+++ b/src/pug/pages/edit-profile-person.pug
@@ -1,17 +1,17 @@
 extends ../_template
 
 block variables
-  - var title       = 'Edit profile | Tempeak'
-  - var description = 'Edit profile | Tempeak'
-  - var ogtitle     = 'Edit profile | Tempeak'
+  - var title       = 'Edit Profile | Tempeak'
+  - var description = 'Edit Profile | Tempeak'
+  - var ogtitle     = 'Edit Profile | Tempeak'
   - var ogimage     = 'assets/img/social.jpg'
 
-  - var pageHeaderTitle = 'Edit profile'
+  - var pageHeaderTitle = 'Edit Profile'
 
 block content
   .main-wrap.no-js
     include ../sections/header-profile
-    include ../sections/page-header-sm-menu-del
+    include ../sections/page-header-arr-menu-del
 
     //begin content
     main.main.sign-up-lg
