--- a/src/pug/sections/page-header-arr-menu-del.pug
+++ b/src/pug/sections/page-header-arr-menu-del.pug
@@ -1,6 +1,8 @@
 //begin page-header
-header.page-header.page-header--sm
+header.page-header.page-header--arr
   .container.container-inn
+    a(href="#").page-header__back
+      +svg('page-header-arrow')
     h2.page-header__title #{pageHeaderTitle}
     //begin page-header-menu
     .page-header__menu.page-header-menu
