--- a/src/style/pages/_sign-up-lg.scss
+++ b/src/style/pages/_sign-up-lg.scss
@@ -108,7 +108,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-bottom: 16px;
   padding-top: 10px;
+
+  @include max(767) {
+    margin-bottom: 0;
+  }
   .log-in-form__checkbox {
     margin-bottom: 18px;
     span {
