did request page

--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Contact'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header
     include ../sections/page-header-sm
 
