--- a/src/pug/pages/delete-profile.pug
+++ b/src/pug/pages/delete-profile.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Delete Profile'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header-profile
     include ../sections/page-header-arr-center
 
