--- a/src/pug/pages/how-it-works.pug
+++ b/src/pug/pages/how-it-works.pug
@@ -17,7 +17,7 @@ block variables
   - var pageHeaderTitle = 'How It Works'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header
     include ../sections/page-header-sm
 
