--- a/src/pug/pages/reset-password.pug
+++ b/src/pug/pages/reset-password.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Reset Password'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header
     include ../sections/page-header-arr-center
 
