--- a/src/pug/pages/change-subscription.pug
+++ b/src/pug/pages/change-subscription.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Change Subscription'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header-profile
     include ../sections/page-header-arr
 
