--- a/src/pug/pages/edit-profile-business.pug
+++ b/src/pug/pages/edit-profile-business.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Edit Profile'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header-profile
     include ../sections/page-header-arr-menu-del
 
