--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Let\'s Find'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header
 
     //begin content
