--- a/src/pug/pages/search-contractor-2.pug
+++ b/src/pug/pages/search-contractor-2.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Search Contractor'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header-profile
     include ../sections/page-header-sm-center
 
