--- a/src/pug/pages/sign-up-2.pug
+++ b/src/pug/pages/sign-up-2.pug
@@ -9,7 +9,7 @@ block variables
   - var pageHeaderTitle = 'Sign up'
 
 block content
-  .main-wrap.no-js
+  .main-wrap
     include ../sections/header
     include ../sections/page-header-sm-center
 
